test/resources/parser/failing/FunDefError6.grading.amy
object FunDef
  def foo(i: Int(32) j: Int(32)): Int := 42 end foo
end FunDef
